# Fabula

./: .gitignore  CMakeInstallDependencies.cmake.in  CMakeLists.txt  CharacterDialog.cpp  CharacterDialog.h  CharacterDialog.ui  ConversationDialog.cpp  ConversationDialog.h  ConversationDialog.ui  Database.cpp  Database.h  DialogDelegate.cpp  DialogDelegate.h  EventDelegate.cpp  EventDelegate.h  EventDialog.cpp  EventDialog.h  EventDialog.ui  Fabula.pro  Fabula.qrc  Fabula.rc  HideColumnsProxyModel.cpp  HideColumnsProxyModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  README.md  README.txt  SqlQueryTreeProxyModel.cpp  SqlQueryTreeProxyModel.h  SqlRelationalTableDialog.cpp  SqlRelationalTableDialog.h  SqlTreeModel.cpp  SqlTreeModel.h  TableToTreeProxyModel.cpp  TableToTreeProxyModel.h  TableTreeModel.cpp  (+8 more)
cmake/: DeployQt4.cmake
docs/plan/: FEATURES.txt
icons/: audio-input-microphone.icns
